feat: add new block and background img

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="main-block__image">
+                <div class="main-block__image _ibg">
                     <img src="./img/cover.jpg" alt="cover image">
                 </div>
             </div>
