--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                         <div class="main-block__title">Finance and Consultancy Solution</div>
                         <div class="main-block__text">We know how large objects will act, but things on a small scale.</div>
                         <div class="main-block__buttons">
-                            <a href="" class="main-block__button">Get Quote Now</a>
+                            <a href="" class="main-block__button main-block__button_orange">Get Quote Now</a>
                             <a href="" class="main-block__button main-block__button_border">Learn More</a>
                         </div>
                     </div>
@@ -50,6 +50,39 @@
                     <img src="./img/cover.jpg" alt="cover image">
                 </div>
             </div>
+            <section class="page__services services">
+                <div class="services__container _container">
+                    <div class="services_body">
+                        <div class="services__column">
+                            <div class="services__item item-service">
+                                <div class="item-service__icon">
+                                    <img src="./img/01.svg" alt="Env consulting img">
+                                </div>
+                                <h3 class="item-service__title">Environmental Consulting</h3>
+                                <div class="item-service__text">We focus on ergonomics and meeting you where you work. </div>
+                            </div>
+                        </div>
+                        <div class="services__column">
+                            <div class="services__item item-service">
+                                <div class="item-service__icon">
+                                    <img src="./img/02.svg" alt="Env consulting img">
+                                </div>
+                                <h3 class="item-service__title">Finance and consultancy </h3>
+                                <div class="item-service__text">Just type what's on your mind and we'll get you there.</div>
+                            </div>
+                        </div>
+                        <div class="services__column">
+                             <div class="services__item item-service services__item_green">
+                                <div class="item-service__icon">
+                                    <img src="./img/03.svg" alt="Env consulting img">
+                                </div>
+                                <h3 class="item-service__title">Financial Services Consulting</h3>
+                                <div class="item-service__text">the quick fox jumps over the lazy dog</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </main>
         <footer class="footer">
             Я подвал
