--- a/index.html
+++ b/index.html
@@ -83,6 +83,52 @@
                     </div>
                 </div>
             </section>
+            <section class="page__advantages advantages">
+                <div class="advantages__container _container">
+                    <div class="advantages__header header-block">
+                        <h2 class="header-block__title">Designing Better Experience</h2>
+                        <div class="header-block__sub-title">Problems trying to resolve the conflict between the two major realms <br> of Classical physics: Newtonian mechanics </div>
+                    </div>
+                    <div class="advantages__body">
+                        <div class="advantages__column">
+                            <div class="advantages__item">
+                                <div class="advantages__icon">
+                                    <img src="./img/advantages/01.svg" alt="">
+                                </div>
+                                <div class="advantages__value">972 +</div>
+                                <div class="advantages__text">Consumer Products </div>
+                            </div>
+                        </div>
+                        <div class="advantages__column">
+                            <div class="advantages__item">
+                                <div class="advantages__icon">
+                                    <img src="./img/advantages/02.svg" alt="">
+                                </div>
+                                <div class="advantages__value">972 +</div>
+                                <div class="advantages__text">Consumer Products </div>
+                            </div>
+                        </div>
+                        <div class="advantages__column">
+                            <div class="advantages__item">
+                                <div class="advantages__icon">
+                                    <img src="./img/advantages/03.svg" alt="">
+                                </div>
+                                <div class="advantages__value">972 +</div>
+                                <div class="advantages__text">Consumer Products </div>
+                            </div>
+                        </div>
+                        <div class="advantages__column">
+                            <div class="advantages__item">
+                                <div class="advantages__icon">
+                                    <img src="./img/advantages/04.svg" alt="">
+                                </div>
+                                <div class="advantages__value">972 +</div>
+                                <div class="advantages__text">Consumer Products </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </main>
         <footer class="footer">
             Я подвал
