--- a/index.html
+++ b/index.html
@@ -93,38 +93,61 @@
                         <div class="advantages__column">
                             <div class="advantages__item">
                                 <div class="advantages__icon">
-                                    <img src="./img/advantages/01.svg" alt="">
+                                    <img src="./img/advantages/01.svg" alt="Consumer Products">
                                 </div>
                                 <div class="advantages__value">972 +</div>
-                                <div class="advantages__text">Consumer Products </div>
+                                <div class="advantages__text">Consumer Products</div>
                             </div>
                         </div>
                         <div class="advantages__column">
                             <div class="advantages__item">
                                 <div class="advantages__icon">
-                                    <img src="./img/advantages/02.svg" alt="">
+                                    <img src="./img/advantages/02.svg" alt="Financial Services ">
                                 </div>
-                                <div class="advantages__value">972 +</div>
-                                <div class="advantages__text">Consumer Products </div>
+                                <div class="advantages__value">181 +</div>
+                                <div class="advantages__text">Financial Services </div>
                             </div>
                         </div>
                         <div class="advantages__column">
                             <div class="advantages__item">
                                 <div class="advantages__icon">
-                                    <img src="./img/advantages/03.svg" alt="">
+                                    <img src="./img/advantages/03.svg" alt="Environmental ">
                                 </div>
-                                <div class="advantages__value">972 +</div>
-                                <div class="advantages__text">Consumer Products </div>
+                                <div class="advantages__value">98% </div>
+                                <div class="advantages__text">Environmental </div>
                             </div>
                         </div>
                         <div class="advantages__column">
                             <div class="advantages__item">
                                 <div class="advantages__icon">
-                                    <img src="./img/advantages/04.svg" alt="">
+                                    <img src="./img/advantages/04.svg" alt="Business & Finance">
                                 </div>
-                                <div class="advantages__value">972 +</div>
-                                <div class="advantages__text">Consumer Products </div>
+                                <div class="advantages__value">746 +</div>
+                                <div class="advantages__text">Business & Finance</div>
                             </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="page__pracitce practice">
+                <div class="practice__container _container">
+                    <div class="practice__header header-block">
+                        <h2 class="header-block__title">Practice Advice</h2>
+                        <div class="header-block__sub-title">Problems trying to resolve the conflict between <br> the two major realms of Classical physics: Newtonian mechanics</div>
+                    </div>
+                    <div class="practice__body">
+                        <div class="practice__column">
+                            <article class="practice__item item-practice">
+                                <div class="item-practice__content">
+                                    <a href="" class="item-practice__link">
+                                    <h4 class="item-practice__title">A single source of truth</h4>
+                                    </a>
+                                    <div class="item-practice__text">Newton thought that light was made up of particles, but then it was discovered </div>
+                                </div>
+                                <a href="" class="item-practice__image _ibg">
+                                    <img src="./img/practice/01.jpg" alt="A single source of truth">
+                                </a>
+                            </article>
                         </div>
                     </div>
                 </div>
