--- a/index.html
+++ b/index.html
@@ -149,6 +149,45 @@
                                 </a>
                             </article>
                         </div>
+                        <div class="practice__column">
+                            <article class="practice__item item-practice">
+                                <div class="item-practice__content">
+                                    <a href="" class="item-practice__link">
+                                    <h4 class="item-practice__title">Fastest way to organize</h4>
+                                    </a>
+                                    <div class="item-practice__text">“Quantum mechanics” is the description of the behaviour of matter</div>
+                                </div>
+                                <a href="" class="item-practice__image _ibg">
+                                    <img src="./img/practice/02.jpg" alt="A single source of truth">
+                                </a>
+                            </article>
+                        </div>
+                        <div class="practice__column">
+                            <article class="practice__item item-practice">
+                                <div class="item-practice__content">
+                                    <a href="" class="item-practice__link">
+                                    <h4 class="item-practice__title">Fastest way to take action</h4>
+                                    </a>
+                                    <div class="item-practice__text">They describe a universe consisting of bodies moving</div>
+                                </div>
+                                <a href="" class="item-practice__image _ibg">
+                                    <img src="./img/practice/03.jpg" alt="A single source of truth">
+                                </a>
+                            </article>
+                        </div>
+                        <div class="practice__column">
+                            <article class="practice__item item-practice">
+                                <div class="item-practice__content">
+                                    <a href="" class="item-practice__link">
+                                    <h4 class="item-practice__title">Work better together</h4>
+                                    </a>
+                                    <div class="item-practice__text">They finally obtained a consistent description of the behaviour</div>
+                                </div>
+                                <a href="" class="item-practice__image _ibg">
+                                    <img src="./img/practice/04.jpg" alt="A single source of truth">
+                                </a>
+                            </article>
+                        </div>
                     </div>
                 </div>
             </section>
