--- a/index.html
+++ b/index.html
@@ -230,6 +230,30 @@
                     </div>
                 </div>
             </section>
+            <div class="page__clients clients">
+                <div class="clients__containter _container">
+                    <div class="clients__items">
+                        <div class="clients__item">
+                            <img src="./img/clients/01.png" alt="">
+                        </div>
+                        <div class="clients__item">
+                            <img src="./img/clients/02.png" alt="">
+                        </div>
+                        <div class="clients__item">
+                            <img src="./img/clients/03.png" alt="">
+                        </div>
+                        <div class="clients__item">
+                            <img src="./img/clients/04.png" alt="">
+                        </div>
+                        <div class="clients__item">
+                            <img src="./img/clients/05.png" alt="">
+                        </div>
+                        <div class="clients__item">
+                            <img src="./img/clients/06.png" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
         </main>
         <footer class="footer">
             Я подвал
